<resources>
    <string name="app_name">BLEApp</string>

    <string name="main_action_search">검색</string>
    <string name="main_action_search_stop">검색 중단</string>
    <string name="main_action_settings">설정</string>
    <string name="main_null_device_name">알 수 없는 장치</string>
    <string name="main_device_not_found">발견된 장치가 없습니다</string>

    <string name="device_invalid_launch">올바른 장치가 아닙니다!</string>
    <string name="device_connecting">연결 중…</string>
    <string name="device_disconnected">장치와 연결이 끊어졌습니다</string>
    <string name="device_connect_error">%s 장치에 연결할 수 없습니다</string>
    <string name="device_info">%s (%s)</string>
    <string name="device_status">상태: %s</string>
    <string name="device_status_connected">연결됨</string>
    <string name="device_status_disconnected">연결 끊김</string>
    <string name="device_status_invalid_device">디바이스의 종류가 올바르지 않습니다</string>
    <string name="device_data">데이터: %s</string>
    <string name="device_data_null">null</string>
    <string name="device_send">전송</string>
    <string name="device_send_no_message">전송할 데이터를 입력해주세요!</string>
    <string name="device_send_too_long_message">데이터는 1회 20글자까지만 보낼 수 있습니다</string>
    <string name="device_action_add_value">추적할 값 추가</string>
    <string name="device_action_save_profile">값 정보 저장</string>
    <string name="device_action_load_profile">값 정보 불러오기</string>
    <string name="device_save_completed">현재 값 설정이 저장되었습니다</string>
    <string name="device_load_completed">값 설정을 불러왔습니다</string>
    <string name="device_error_nothing_to_save">저장할 내용이 없습니다</string>
    <string name="device_error_nothing_to_load">불러올 내용이 없습니다</string>
    <string name="device_error_save_io_fail">값 설정을 저장하는 중 오류가 발생했습니다</string>
    <string name="device_error_load_io_fail">값 설정을 불러오는 중 오류가 발생했습니다</string>
    <string name="device_empty">추적중인 값이 없습니다</string>
    <string name="device_analog_oob">범위이탈</string>

    <string name="add_title_new">새 추적할 값 추가</string>
    <string name="add_title_change">추적할 값 변경</string>
    <string name="add_name">값 이름</string>
    <string name="add_type">값 형식</string>
    <string name="add_type_d">디지털</string>
    <string name="add_type_a">아날로그</string>
    <string name="add_length">값 길이</string>
    <string name="add_resolution">해상도</string>
    <string name="add_pos">값 위치</string>
    <string name="add_preview">미리보기</string>
    <string name="add_error_name_empty">이름은 비워둘 수 없습니다</string>
    <string name="add_error_invalid_value">값이 올바르지 않습니다</string>
    <string name="add_error_invalid_resolution">해상도가 올바르지 않습니다</string>

    <string name="pin_title">비밀번호 입력</string>
    <string name="pin_inst_enter">비밀번호를 입력해주세요</string>
    <string name="pin_inst_create">새 PIN 코드를 입력해주세요</string>
    <string name="pin_inst_create_confirm">새 PIN 코드를 한 번 더 입력해주세요</string>
    <string name="pin_inst_invalid">PIN 코드가 올바르지 않습니다</string>
    <string name="pin_inst_create_confirm_invalid">코드가 일치하지 않습니다\n새 PIN 코드를 입력해주세요</string>
    <string name="pin_code_empty">─</string>
    <string name="pin_code_fill">●</string>

    <string name="settings_title">설정</string>
    <string name="settings_security">보안</string>
    <string name="settings_security_pin">PIN 코드</string>
    <string name="settings_security_pin_create">PIN 코드 새로 만들기</string>
    <string name="settings_security_pin_clear">PIN 코드 제거</string>
    <string name="settings_security_pin_change">PIN 코드 변경</string>

    <string name="unknown_device">알 수 없는 장치</string>
    <string name="unknown_characteristic">알 수 없는 특성</string>
    <string name="unknown_service">알 수 없는 서비스</string>
    <string name="title_activity_settings">Settings</string>
</resources>
