<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/add_name" />

    <EditText
        android:id="@+id/edt_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/add_type" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdo_add_type_digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/add_type_d" />

        <RadioButton
            android:id="@+id/rdo_add_type_analog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_type_a" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_add_analog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/add_length" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvw_add_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:padding="8dp"
                android:text="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_length_add"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="+" />

            <Button
                android:id="@+id/btn_add_length_sub"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="-" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/add_resolution" />

        <EditText
            android:id="@+id/edt_add_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/add_pos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spn_add_pos_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvw_add_pos_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="number"
            android:padding="8dp"
            android:text="0"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add_pos_pos_add"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="+" />

        <Button
            android:id="@+id/btn_add_pos_pos_sub"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="-" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/add_preview" />

    <TextView
        android:id="@+id/tvw_add_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold" />

</LinearLayout>